--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                     <div class="mobile-menu">
                         <div class="menu">
                             <ul>
-                                <li><a href="main.html">Главная</a></li>
+                                <li><a href="index.html">Главная</a></li>
                                 <li><a href="about.html">О нас</a></li>
                                 <li><a href="#">Услуги</a></li>
                                 <li><a href="shop.html">Магазин</a></li>
@@ -136,7 +136,7 @@
                 <h3>Навигация</h3>
             </div> 
             <ul>
-                <li><a href="main.html">Главная</a></li>
+                <li><a href="index.html">Главная</a></li>
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="#">Услуги</a></li>
                 <li><a href="shop.html">Магазин</a></li>
