--- a/shop.html
+++ b/shop.html
@@ -163,25 +163,29 @@
         </section>
         <section class="shopping-cart">
             <div id="basket" class="basket-container">
-                <h2 class="basket-title">Корзина</h2>
-                <button class="basket-add-button">
-                    <h4>Перейти к оформлению</h4>
-                </button>
-                <button class="basket-clear-button">
-                    <i class="fa-regular fa-circle-xmark"></i>
-                </button>
-                <span class="basket-total"></span>
-                <div class="basket-sort">
-                    <button class="basket-sort-asc">
-                        <i class="fa-solid fa-arrow-up"></i>
-                    </button>
-                    <button class="basket-sort-desc">
-                        <i class="fa-solid fa-arrow-down"></i>
+                <div class="basket-header">
+                    <span class="basket-total">Общая сумма:</span>
+                    <h2 class="basket-title">Корзина</h2>
+                    <button class="basket-clear-button">
+                        <i class="fa-regular fa-circle-xmark"></i>
                     </button>
                 </div>
-                <button class="basket-filter">
-                    <i class="fa-solid fa-filter"></i>
-                </button>
+                <div class="basket-footer">
+                    <div class="basket-sort">
+                        <button class="basket-sort-asc">
+                            <i class="fa-solid fa-arrow-up"></i>
+                        </button>
+                        <button class="basket-sort-desc">
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </button>
+                    </div>
+                    <button class="basket-add-button">
+                        <h4>Перейти к оформлению</h4>
+                    </button>
+                    <button class="basket-filter">
+                        <i class="fa-solid fa-filter"></i>
+                    </button>
+                </div>
             </div>
         </section>
     </main>
