--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="src/fontawesome-free-6.5.1-web/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/src/js/basket.js" async></script>
+    <script src="/src/js/filter.js" async></script>
     <title>GoBeauty</title>
 </head>
 <body>
@@ -48,6 +49,30 @@
                     Добавь фильтр блять
                 </h2>
         </header>
+        <section class="filters">
+            <ul>
+                <li>
+                    <button class="catalog-sort-asc">
+                        <i class="fa-solid fa-arrow-up"></i>
+                    </button>
+                </li>
+                <li>
+                    <button class="catalog-sort-desc">
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </button>
+                </li>
+                <li>
+                    <button class="catalog-filter">
+                        <i class="fa-solid fa-filter"></i>
+                    </button>
+                </li>
+                <li>
+                    <button class="catalog-reset">
+                        <i class="fa-regular fa-circle-xmark"></i>
+                    </button>
+                </li>
+            </ul>
+        </section>
         <section class="catalog">
                 <div class="catalog-card">
                     <img src="/src/images/catalog/scrab.png">
