--- a/index.html
+++ b/index.html
@@ -125,69 +125,66 @@
             <div class="slider">
                 <div class="slide">
                     <div class="card-header">
-                        <img src="src/images/img4.jpg" alt="">
+                        <img src="src/images/reviews/review1.jpg" alt="">
                         <div class="header-text">
-                            <h3 class="name">Roman Goslyakov</h3>
-                            <h4 class="service">Fisting</h4>
+                            <h3 class="name">Александра Бортич</h3>
+                            <h4 class="service">Женская Стрижка</h4>
                         </div>
                     </div>
                     <div class="card-text">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut dignissim, neque in pretium iaculis, lacus tellus rhoncus erat, eget consectetur lacus mi quis ipsum.
-                            Vivamus et risus ac leo rutrum cursus ut nec metus. Donec sollicitudin augue vel nulla ullamcorper tincidunt.
-                            Quisque rutrum elit at magna vulputate, ut dignissim diam volutpat. Mauris a fringilla ipsum.
+                           Мне, как актрисе, приходится постоянно менять свой образ, с чем мне регулярно помогают профессионалы 
+                           из goBeuty. К каждому своему фильму я готовлюсь именно с ними, и еещ ни разу не  пожалела об этом.
                         </p>
                     </div>
                </div>
                 <div class="slide">
                     <div class="card-header">
-                        <img src="/src/images/img4.jpg" alt="">
+                        <img src="/src/images/reviews/review2.jpg" alt="">
                         <div class="header-text">
-                            <h3 class="name">Roman Goslyakov</h3>
-                            <h4 class="service">Fisting</h4>
+                            <h3 class="name">Гаяз Ашкудинов</h3>
+                            <h4 class="service">Полное изменение внешности</h4>
                         </div>
                     </div>
                     <div class="card-text">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut dignissim, neque in pretium iaculis, lacus tellus rhoncus erat, eget consectetur lacus mi quis ipsum.
-                            Vivamus et risus ac leo rutrum cursus ut nec metus. Donec sollicitudin augue vel nulla ullamcorper tincidunt.
-                            Quisque rutrum elit at magna vulputate, ut dignissim diam volutpat. Mauris a fringilla ipsum.
+                            Понадобилось кардинально изменить внешность как можно скорее - захотел перемен. 
+                            Ребята с удавольствием приняли вызов и сделали все на высшем уровне - даже мать родная не узнала.
+                            Таким красивым я еще никогда не был, теперь для меня началась новая жизнь, спасибо Роману.
+                            Для тех, кто все еще сомневается - ребят, вы издеваетесь?
                         </p>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="card-header">
-                        <img src="src/images/img4.jpg" alt="">
+                        <img src="src/images/reviews/review3.jpg" alt="">
                         <div class="header-text">
-                            <h3 class="name">Roman Goslyakov</h3>
-                            <h4 class="service">Fisting</h4>
+                            <h3 class="name">Виктор Баринов</h3>
+                            <h4 class="service">Ногтевой сервис</h4>
                         </div>
                     </div>
                     <div class="card-text">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut dignissim, neque in pretium iaculis, lacus tellus rhoncus erat, eget consectetur lacus mi quis ipsum.
-                            Vivamus et risus ac leo rutrum cursus ut nec metus. Donec sollicitudin augue vel nulla ullamcorper tincidunt.
-                            Quisque rutrum elit at magna vulputate, ut dignissim diam volutpat. Mauris a fringilla ipsum.
+                            Как шеф-повар Claude Monet - лучшего ресторана Москвы я должен особенно следить за состоянием рук,
+                            в чем мне и моей команде регулярно помогают профессионалы из GoBeuty. С ними мои ногти идеальны!
                         </p>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="card-header">
-                        <img src="src/images/img4.jpg" alt="">
+                        <img src="src/images/reviews/rewiew4.jpg" alt="">
                         <div class="header-text">
-                            <h3 class="name">Roman Goslyakov</h3>
-                            <h4 class="service">Fisting</h4>
+                            <h3 class="name">Максим Кац</h3>
+                            <h4 class="service">Депеляция</h4>
                         </div>
                     </div>
                     <div class="card-text">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Ut dignissim, neque in pretium iaculis, lacus tellus rhoncus erat, eget consectetur lacus mi quis ipsum.
-                            Vivamus et risus ac leo rutrum cursus ut nec metus. Donec sollicitudin augue vel nulla ullamcorper tincidunt.
-                            Quisque rutrum elit at magna vulputate, ut dignissim diam volutpat. Mauris a fringilla ipsum.
+                            Как человек, который ценит свое время и деньги, я всегда стараюсь выбирать лучшие варианты из доступных. 
+                            Именно поэтому я посетил GoBeuty, лучший в своем роде салон. 
+                            Здесь работают настоящие профессионалы, которые знают, как сделать клиента счастливым. 
+                            Я остался очень доволен своим визитом и рекомендую салон всем, кто ценит свое время и хочет выглядеть на все сто.
+                            Также около салона обитает веселый пес, даже ради него я готов прийти снова!
                         </p>
                     </div>
                 </div>
