added log in page

--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@
                                 <li><a href="about.html">О нас</a></li>
                                 <li><a href="#">Услуги</a></li>
                                 <li><a href="shop.html">Магазин</a></li>
-                                <li><a href="#">Войти</a></li>
+                                <li><a href="autentification.html">Войти</a></li>
                                 <li><a href="#basket"><i class="fa-solid fa-cart-shopping"></i></a></li>
                             </ul>
                         </div>
@@ -274,6 +274,7 @@
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="#">Услуги</a></li>
                 <li><a href="shop.html">Магазин</a></li>
+                <li><a href="autentification.html">Войти</a></li>
 
             </ul>
         </div>
