--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                                 <li><a href="about.html">О нас</a></li>
                                 <li><a href="#">Услуги</a></li>
                                 <li><a href="shop.html">Магазин</a></li>
-                                <li><a href="#">Войти</a></li>
+                                <li><a href="autentification.html">Войти</a></li>
                             </ul>
                         </div>
                     </div>
@@ -140,6 +140,7 @@
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="#">Услуги</a></li>
                 <li><a href="shop.html">Магазин</a></li>
+                <li><a href="autentification.html">Войти</a></li>
 
             </ul>
         </div>
