--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <li><a href="about.html">О нас</a></li>
                                 <li><a href="#">Услуги</a></li>
                                 <li><a href="shop.html">Магазин</a></li>
-                                <li><a href="#">Войти</a></li>
+                                <li><a href="autentification.html">Войти</a></li>
                             </ul>
                         </div>
                     </div>
@@ -226,6 +226,7 @@
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="#">Услуги</a></li>
                 <li><a href="shop.html">Магазин</a></li>
+                <li><a href="autentification.html">Войти</a></li>
 
             </ul>
         </div>
