finished about us page

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <link rel="icon" type="image/x-icon" href="src/images/flaticon.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="src/images/flaticon.jpg">
@@ -30,7 +31,7 @@
                             <ul>
                                 <li><a href="index.html">Главная</a></li>
                                 <li><a href="about.html">О нас</a></li>
-                                <li><a href="#">Услуги</a></li>
+                                <li><a href="services.html">Услуги</a></li>
                                 <li><a href="shop.html">Магазин</a></li>
                                 <li><a href="autentification.html">Войти</a></li>
                             </ul>
@@ -44,65 +45,75 @@
         <section class="history">
             <div class="history-wrapper">
                 <div class="history-block">
-                    <div class="img-wrapper">
-                        <img src="src/images/img4.jpg">
-                    </div>
+                     <img src="src/images/about/roman.jpg">
                     <div class="text-wrapper">
+                        <h4 class="text-header">С чего все началось?</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quam ligula, scelerisque quis ipsum ut, cursus porta ligula. Sed tincidunt ut lacus vitae varius.
-                             Etiam scelerisque, leo vel lacinia finibus, lacus nibh pharetra odio, quis consequat urna dolor id ligula. Nullam id consequat sem, at rutrum nulla. Donec consequat ullamcorper arcu sit amet vulputate.
-                            Donec ut arcu lectus. Donec iaculis porttitor tincidunt. Nulla mattis consequat nibh vulputate vulputate. Integer sit amet suscipit nisl, elementum vestibulum velit. Suspendisse et facilisis elit.
-
-                            Curabitur ut dolor vel mi dictum ullamcorper. Morbi dignissim dolor ut sapien eleifend interdum. 
-                            Nam malesuada at lacus non efficitur. Phasellus eu neque sodales, blandit enim eu, dapibus tortor. 
-                            Etiam rhoncus sem et dui varius, sodales vehicula leo dapibus. Curabitur nec laoreet libero, a malesuada eros. 
-                            Nam viverra dui sit amet blandit commodo. Cras vel mauris eget ipsum pulvinar scelerisque. 
-                            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-                            Proin hendrerit venenatis vestibulum. Maecenas feugiat volutpat finibus. Praesent id cursus lectus. 
-                            Sed at sem at elit aliquam aliquam. Donec eu eros est. Donec tempus volutpat metus, id rutrum nisi pharetra nec. 
-                            Nullam neque velit, lobortis sit amet efficitur ac, porttitor eu nisl.
+                            Роман Госленко, некогда простой парикмахер из Таганрога, всегда мечтал сделать этот мир лучше.
+                            Увлеченный своей профессией и стремясь доставить удовольствие и счастье каждому клиенту, Роман решил основать свой собственный салон красоты.
+                            Его целью было создать место, где каждый человек мог бы почувствовать себя особенным, где красота не только внешняя, но и внутренняя.
+                        </p>
+                        <p>
+                            С первого дня своей работы, салон Романа Госленко стал местом, с которого начался настоящий успех.
+                            Благодаря своему уникальному подходу и профессиональной мастерской, салон быстро завоевал репутацию места,
+                            где клиенты не только получают превосходные услуги, но и ощущают заботу и внимание каждого сотрудника.
+                        </p>
+                        <p>
+                            Как управляющий и основатель салона, Роман Госленко постоянно стремится к новым вершинам и инновациям.
+                            Он следит за последними тенденциями моды и красоты, участвует в мастер-классах и тренингах, чтобы всегда быть в курсе новейших техник и технологий.
+                            Этот стремление к постоянному улучшению позволяет салону предлагать своим клиентам самые инновационные и высококачественные услуги.
+                        </p>
+                    </div>
+                </div>
+                <div class="history-block odd">
+                        <img src="src/images/about/command.jpg">
+                    <div class="text-wrapper">
+                        <h4 class="text-header">Почему стоит довериться нам?</h4>
+                        <p>
+                           Важным принципом, на котором основывается GoBeauty, является индивидуальный подход к каждому клиенту.
+                           Наша команда стремятся понять желания и предпочтения каждого клиента, чтобы создать уникальный образ, подчеркнуть его естественную красоту и поднять самооценку.
+                           Салон предлагает широкий спектр услуг - от стрижек и окрашивания волос до спа-процедур и макияжа - все, чтобы помочь клиентам выглядеть и чувствовать себя лучше.
+                        </p>
+                        <p>
+                            Одним из главных достоинств GoBeauty является наша команда профессионалов. Все сотрудники салона прошли обучение и непрерывное самосовершенствование, чтобы быть в курсе последних техник и стилистических новинок.
+                            Они обладают креативностью, талантом и страстью к своей работе, что позволяет им создавать неповторимые образы и достигать отличных результатов для всех клиентов.
+                        </p>
+                        <p>
+                            И, конечно, мы неустанно следим за своей репутацией и доверием клиентов.
+                            Мы стремяимся сделать каждое посещение особенным и незабываемым, даря клиентам не только красоту, но и положительные эмоции.
+                            Каждый клиент GoBeauty важен и ценен, и благодаря этому искреннему отношению мы продолжаем свое стремительное развитие и успех.
                         </p>
                     </div>
                 </div>
                 <div class="history-block">
-                    <div class="img-wrapper">
-                        <img src="src/images/img4.jpg">
-                    </div>
+                    <img src="src/images/about/moscow.jpg">
                     <div class="text-wrapper">
+                        <h4 class="text-header">Что дальше?</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quam ligula, scelerisque quis ipsum ut, cursus porta ligula. Sed tincidunt ut lacus vitae varius.
-                             Etiam scelerisque, leo vel lacinia finibus, lacus nibh pharetra odio, quis consequat urna dolor id ligula. Nullam id consequat sem, at rutrum nulla. Donec consequat ullamcorper arcu sit amet vulputate.
-                            Donec ut arcu lectus. Donec iaculis porttitor tincidunt. Nulla mattis consequat nibh vulputate vulputate. Integer sit amet suscipit nisl, elementum vestibulum velit. Suspendisse et facilisis elit.
-
-                            Curabitur ut dolor vel mi dictum ullamcorper. Morbi dignissim dolor ut sapien eleifend interdum. 
-                            Nam malesuada at lacus non efficitur. Phasellus eu neque sodales, blandit enim eu, dapibus tortor. 
-                            Etiam rhoncus sem et dui varius, sodales vehicula leo dapibus. Curabitur nec laoreet libero, a malesuada eros. 
-                            Nam viverra dui sit amet blandit commodo. Cras vel mauris eget ipsum pulvinar scelerisque. 
-                            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-                            Proin hendrerit venenatis vestibulum. Maecenas feugiat volutpat finibus. Praesent id cursus lectus. 
-                            Sed at sem at elit aliquam aliquam. Donec eu eros est. Donec tempus volutpat metus, id rutrum nisi pharetra nec. 
-                            Nullam neque velit, lobortis sit amet efficitur ac, porttitor eu nisl.
+                            Однако, чтобы распространить свою философию красоты еще дальше, мы приняли решение переехать в Москву - модный и космополитичный город, где можно донести свои идеи и вдохновение до большего числа людей. 
+                            Салон открыл свои двери в Москве с новым энтузиазмом и энергией, и быстро стал одним из самых популярных заведений города. 
+                        </p>
+                        <p>
+                            Это стало возможно благодаря высокому качеству услуг, индивидуальному подходу к каждому клиенту и стремлению команды  стать лучшими в своем деле. GoBeauty постоянно обучает своих мастеров новым техникам и тенденциям в индустрии красоты, чтобы быть на шаг впереди конкурентов и предлагать своим клиентам самые современные и инновационные услуги.
                         </p>
                     </div>
                 </div>
-                <div class="history-block">
-                    <div class="img-wrapper">
-                        <img src="src/images/img4.jpg">
-                    </div>
+                <div class="history-block odd">
+                    <img src="src/images/about/charity.jpg">
                     <div class="text-wrapper">
+                        <h4 class="text-header">Благотворительность</h4>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quam ligula, scelerisque quis ipsum ut, cursus porta ligula. Sed tincidunt ut lacus vitae varius.
-                             Etiam scelerisque, leo vel lacinia finibus, lacus nibh pharetra odio, quis consequat urna dolor id ligula. Nullam id consequat sem, at rutrum nulla. Donec consequat ullamcorper arcu sit amet vulputate.
-                            Donec ut arcu lectus. Donec iaculis porttitor tincidunt. Nulla mattis consequat nibh vulputate vulputate. Integer sit amet suscipit nisl, elementum vestibulum velit. Suspendisse et facilisis elit.
-
-                            Curabitur ut dolor vel mi dictum ullamcorper. Morbi dignissim dolor ut sapien eleifend interdum. 
-                            Nam malesuada at lacus non efficitur. Phasellus eu neque sodales, blandit enim eu, dapibus tortor. 
-                            Etiam rhoncus sem et dui varius, sodales vehicula leo dapibus. Curabitur nec laoreet libero, a malesuada eros. 
-                            Nam viverra dui sit amet blandit commodo. Cras vel mauris eget ipsum pulvinar scelerisque. 
-                            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-                            Proin hendrerit venenatis vestibulum. Maecenas feugiat volutpat finibus. Praesent id cursus lectus. 
-                            Sed at sem at elit aliquam aliquam. Donec eu eros est. Donec tempus volutpat metus, id rutrum nisi pharetra nec. 
-                            Nullam neque velit, lobortis sit amet efficitur ac, porttitor eu nisl.
+                            Но наш успех не ограничивается лишь предоставлением лучших услуг.
+                            Мы также активно участвуем в благотворительных акциях и поддержке местных сообществ.
+                            GoBeauty регулярно проводит бесплатные курсы для людей, попавших в сложные жизненные ситуации, чтобы помочь им обрести уверенность в себе и начать новую жизнь.
+                            Кроме того, Романа Госленко регулярно лично организует сбор средств для нужд армии России.
+                        </p>
+                        <p>
+                            GoBeuty и наш основатель, Роман Госленко – пример того, как стремление к красоте и благополучию может подарить надежду и счастье другим людям.
+                            Мы не только помогает выглядеть красиво, но и создаем положительную обстановку, в которой люди чувствуют себя ценными и уникальными.
+                            Благодаря своей преданности и предприимчивости, Роман Госленко стал одним из ведущих фигур в индустрии красоты, и его салон продолжает радовать и каждый день.
+                        </p>
+                        <p>
                         </p>
                     </div>
                 </div>
@@ -138,7 +149,7 @@
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about.html">О нас</a></li>
-                <li><a href="#">Услуги</a></li>
+                <li><a href="services.html">Услуги</a></li>
                 <li><a href="shop.html">Магазин</a></li>
                 <li><a href="autentification.html">Войти</a></li>
 
@@ -149,7 +160,7 @@
                 <h3>Товары и услуги</h3>
             </div> 
             <ul>
-                <li><a href="#">Наши услуги</a></li>
+                <li><a href="services.html">Наши услуги</a></li>
                 <li><a href="shop.html">Магазин</a></li>
             </ul>
         </div>
