--- a/autentification.html
+++ b/autentification.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <link rel="icon" type="image/x-icon" href="src/images/flaticon.jpg">
     <meta charset="UTF-8">
