--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <ul>
                                 <li><a href="index.html">Главная</a></li>
                                 <li><a href="about.html">О нас</a></li>
-                                <li><a href="#">Услуги</a></li>
+                                <li><a href="services.html">Услуги</a></li>
                                 <li><a href="shop.html">Магазин</a></li>
                                 <li><a href="autentification.html">Войти</a></li>
                             </ul>
@@ -110,7 +110,6 @@
                         </div>
                     </div>
                 </div>
-            <!---наша философия. Узнать больше о нас-->
         </section>
         <section class="reviews">
             <div class="main-container">
@@ -120,7 +119,7 @@
                     Не откладывай свою мечту на завтра, воплоти ее в реальность уже сегодня!
                     Приходи и стань лучшим воплощением себя вместе с GoBeauty!</p>
                 </div>
-                <a href="#"><h5>Подробнее</h5></a>
+                <a href="services.html"><h5>Подробнее</h5></a>
             </div>
             <div class="slider">
                 <div class="slide">
@@ -224,7 +223,7 @@
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about.html">О нас</a></li>
-                <li><a href="#">Услуги</a></li>
+                <li><a href="services.html">Услуги</a></li>
                 <li><a href="shop.html">Магазин</a></li>
                 <li><a href="autentification.html">Войти</a></li>
 
@@ -235,7 +234,7 @@
                 <h3>Товары и услуги</h3>
             </div> 
             <ul>
-                <li><a href="#">Наши услуги</a></li>
+                <li><a href="services.html">Наши услуги</a></li>
                 <li><a href="shop.html">Магазин</a></li>
             </ul>
         </div>
