--- a/shop.html
+++ b/shop.html
@@ -34,7 +34,7 @@
                             <ul>
                                 <li><a href="index.html">Главная</a></li>
                                 <li><a href="about.html">О нас</a></li>
-                                <li><a href="#">Услуги</a></li>
+                                <li><a href="services.html">Услуги</a></li>
                                 <li><a href="shop.html">Магазин</a></li>
                                 <li><a href="autentification.html">Войти</a></li>
                                 <li><a href="#basket"><i class="fa-solid fa-cart-shopping"></i></a></li>
@@ -283,8 +283,8 @@
                 <h3>Товары и услуги</h3>
             </div> 
             <ul>
-                <li><a href="#">Наши услуги</a></li>
-                <li><a href="#">Магазин</a></li>
+                <li><a href="services.html">Наши услуги</a></li>
+                <li><a href="shop.html">Магазин</a></li>
             </ul>
         </div>
         <div class="contact">
