--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
                     <div class="master-card">
                         <img src="/src/images/services/roman.jpg">
                         <div class="card-body">
-                            <h3 class="master-name">Роман Госляков</h3>
+                            <h3 class="master-name">Роман Госленко</h3>
                             <h4 class="experience">10 лет</h4>
                             <p class="about">Основатель GoBeauty, специалист с опытом более 10 лет. Воплотит все ваши фантазии.</p>
                             <button class="sign-in">
@@ -154,7 +154,7 @@
                     <div class="master-card">
                         <img src="/src/images/services/roman.jpg">
                         <div class="card-body">
-                            <h3 class="master-name">Роман Госляков</h3>
+                            <h3 class="master-name">Роман Госленко</h3>
                             <h4 class="experience">10 лет</h4>
                             <p class="about">Основатель GoBeauty, специалист с опытом более 10 лет. Воплотит все ваши фантазии.</p>
                             <button class="sign-in">
